# ApiKit

./: .clangd  .gitignore  CMakeLists.txt  README.md  apikit_data.json  config.toml  http_client.c  main.c
.cache/clangd/index/: cJSON.c.872F07FE0FB38E3A.idx  cJSON.h.D112DB63E8DC62B8.idx  http_client.c.2E31315429C2B110.idx  http_client.c.F91BF5924E4DAC62.idx  http_client.h.5D3045509FF69C24.idx  http_client.h.86C1F3B7486A2352.idx  http_parser.c.143DD58613BC8F43.idx  http_parser.c.D5D499B0DCCB36A1.idx  http_parser.h.5B587032B1D809AA.idx  http_parser.h.7C1C08ED1A715032.idx  main.c.253D2EA04DE04EF6.idx  main.c.BB58B14E36367307.idx  nuklear.h.603B0FF13EF23892.idx  nuklear_glfw_gl3.h.BCD35D99357BA37D.idx  toml.c.0468F4FCE8A7A501.idx  toml.c.2DD6857F9D163572.idx  toml.h.E58429BCE6417C91.idx  toml.h.F2B774F384E87E52.idx
docs/: DEVELOPMENT.md
examples/: config_example.toml  sample_requests.http
include/: http_client.h  http_parser.h  store.h
libs/: README.md
src/: http_client.c  http_parser.c  main.c  store.c
tests/: README.md  test_http_client.c  test_http_parser.c  test_simple_client.c
tests/fixtures/: complex_request.http  malformed_request.http  simple_request.http
tests/unity/: unity.c  unity.h
